src/main/kotlin/com/example/onui/global/config/error/exception/FeignClientException.kt
package com.example.onui.global.config.error.exception

import com.example.onui.global.config.error.data.ErrorCode


object FeignClientException: BusinessException(ErrorCode.FEIGN_CLIENT)
